# TNG033

./: README.md
Tentor/2022 January/Jan12_2022/: ex2_out.txt  ex4_out.txt  exerc1.cpp  exerc2.cpp  exerc4.cpp  exerc6.cpp  theory_exerc3.txt  theory_exerc5.txt
Tentor/2022 January/code - students/: CMakeLists.txt  ex1_out.txt  exerc4.cpp  integers.txt  theory_exerc5.txt
Tentor/2022 March/March16_2022/March16_2022/code/: CMakeLists.txt  ex2_out.txt  exerc1.cpp  exerc2.cpp  exerc4.cpp  exerc6.cpp  theory_exerc5.txt
Tentor/2022 March/March16_2022_Files/code/: CMakeLists.txt  ex1_out.txt  ex4_out.txt  ex6_out.txt  exerc1.cpp  exerc2.cpp  exerc4.cpp  exerc6.cpp  numbers.txt  theory_exerc3.txt
